--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-electron-app",
   "version": "1.0.0",
   "description": "electron app",
+  "repository": "github:bqio/my-electron-app",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
